--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   material_design_icons_flutter: ^7.0.7296
   get: ^4.7.2
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
