--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   material_design_icons_flutter: ^7.0.7296
   get: ^4.7.2
   shared_preferences: ^2.2.2
-
+  flutter_colorpicker: ^1.0.3
+  provider: ^6.0.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
